# glycofragR

./: .RData  .Rhistory  .gitignore  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  CRAN_READINESS_REVIEW.md  DEVELOPMENT_PLAN.md  GLycan_fragments_example.py  GlycofragR_test_UPDATED.R  GlypPRM_v01.py  HexNAc(4)Hex(5)Fuc(2)_SPYYNVSDEISFHCYDGYTLR.xlsx  IMPLEMENTATION_COMPLETE.md  LICENSE  MIGRATION_GUIDE.md  PYTHON_TO_R_CONVERSION_SUMMARY.md  QUICK_REFERENCE.md  README.md  R_WRAPPER_USAGE_UPDATE.md  Real_glycopeptide_Test.py  SETUP_INSTRUCTIONS.md  START_HERE.R  USAGE_EXAMPLES.md  glycopeptide_fragments_example.py  install_glycofragr.R  install_glycofragr_v2.R  install_packages.R  load_glycofragr.R  pyproject.toml  quickstart.R  setup_all.R  setup_simple.R  test_reticulate_conversion.R  visualization_control_examples.py
glycofrag/: __init__.py  analysis.py  glycan_analysis.py
glycofrag/composition/: __init__.py  parser.py
glycofrag/core/: __init__.py  constants.py  mass_calculator.py  modifications.py
glycofrag/fragmentation/: __init__.py  fragmentor.py
glycofrag/glycan/: __init__.py  facade.py
glycofrag/glycopeptide/: __init__.py  glycopeptide.py
glycofrag/io/: __init__.py  batch.py  tables.py  visualizer.py
glycofrag/peptide/: __init__.py  peptide.py
glycofrag/structure/: __init__.py  builder.py  classifier.py  predictor.py
glycofrag/tests/: __init__.py  test_batch.py  test_constants.py  test_edge_cases.py  test_fragment_comparison.py  test_glycan.py  test_glycan_fragmentation.py  test_glycan_modifications.py  test_glycopeptide.py  test_integration.py  test_io_tables.py  test_mass_calculator.py  test_mass_validation.py  test_peptide.py  test_phase3.py  test_real_data.py
glycofrag/utils/: __init__.py  caching.py  validation.py
glycofragR/: .Rbuildignore  CITATION.cff  DESCRIPTION  LICENSE  NAMESPACE  README.md  README_R.md
glycofragR.Rcheck/: 00install.out  glycofragR-Ex.R  glycofragR-Ex.Rout  glycofragR-Ex.timings  glycofragR-manual.tex
glycofragR.Rcheck/glycofragR/: DESCRIPTION  INDEX  NAMESPACE
glycofragR.Rcheck/tests/: testthat.R  testthat.Rout
glycofragR/R/: glycan.R  glycan_analysis.R  glycopeptide.R  internal.R  package.R  peptide.R  utils.R  zzz.R
glycofragR/man/: glycan_analysis_clean_df.Rd  glycan_analysis_export.Rd  glycan_analysis_new.Rd  glycan_analysis_structures.Rd  glycan_analysis_summary.Rd  glycan_analysis_theoretical_df.Rd  glycan_analysis_visualize.Rd  glycan_generate_fragments.Rd  glycan_mass.Rd  glycan_new.Rd  glycan_predict_structures.Rd  glycan_visualize.Rd  glycofragR.Rd  glycopeptide_fragments.Rd  glycopeptide_new.Rd  glycopeptide_summary.Rd  list_supported_modifications.Rd  peptide_fragments.Rd  peptide_new.Rd  set_glycofrag_conda_env.Rd
glycofragR/tests/: testthat.R
(+37 files in other folders)
